Self_Paced_Exercices/Securing_Workloads/Authorization_Policy_Overwrite_Default_Deny/answer/AuthorizationPolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-lb
  namespace: default
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["istio-ingress"]
    to:
    - operation:
        methods: ["GET"]
        paths: ["/"]
        ports: ["80"]
